feat: Add image assets for enhanced UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/laptop-2298286_1280.png
+    - assets/images/pixel-cells-3947911_1280.png
+    - assets/images/social-media-3846597_1280.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
