--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/laptop-2298286_1280.png
-    - assets/images/pixel-cells-3947911_1280.png
-    - assets/images/social-media-3846597_1280.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
